# careless-whisper

./: README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  claude-issues.yml  claude-pr-review.yml
docs/: index.html
docs/superpowers/plans/: 2026-03-22-security-audit.md
docs/superpowers/specs/: 2026-03-22-security-audit-design.md
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/audio/: capture.rs  decode.rs  mod.rs  resample.rs  volume.rs
src-tauri/src/config/: settings.rs
src-tauri/src/hotkey/: manager.rs
src-tauri/src/models/: downloader.rs
src-tauri/src/output/: clipboard.rs  paste.rs
src-tauri/src/transcribe/: whisper.rs
src/components/: ModelManager.tsx  Overlay.tsx  Settings.tsx
src/hooks/: useTauriEvents.ts
src/styles/: globals.css
