[package]
name = "careless-whisper"
version = "0.1.0"
description = "Local voice-to-text transcription for macOS"
authors = []
edition = "2021"

[lib]
name = "careless_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.12", features = ["metal"] }
cpal = "0.15"
rubato = "0.15"
arboard = "3"
objc2 = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "5"
log = "0.4"
env_logger = "0.11"
